--- a/looplab/css/style.css
+++ b/looplab/css/style.css
@@ -7,3 +7,36 @@ body {
   border-bottom: #008ed6 3px solid;
   opacity: 0.8;
 }
+
+#home-section {
+  background-image: url(../img/home.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 0px -200px;
+  min-height: 75vh;
+}
+
+#home-section .dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 75vh;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+#home-section .home-inner {
+  padding-top: 100px;
+}
+
+#home-section .card-form {
+  opacity: 0.8;
+}
+
+#home-section .fas {
+  background: #fff;
+  color: #008ed6;
+  padding: 5px;
+  border-radius: 5px;
+}
