--- a/looplab/css/style.css
+++ b/looplab/css/style.css
@@ -14,7 +14,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: 0px -200px;
-  min-height: 75vh;
+  min-height: 700px;
 }
 
 #home-section .dark-overlay {
@@ -22,7 +22,7 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 75vh;
+  height: 700px;
   background: rgba(0, 0, 0, 0.7);
 }
 
@@ -37,6 +37,18 @@ body {
 #home-section .fas {
   background: #fff;
   color: #008ed6;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#explore-section {
+  color: #333;
+  /* height: 70vh; */
+}
+#explore-section .fas,
+#share-section .fas {
+  background: #333;
+  color: #fff;
   padding: 5px;
   border-radius: 5px;
 }
