section newsletter and boxes

--- a/pickabook/css/style.css
+++ b/pickabook/css/style.css
@@ -9,3 +9,23 @@ body {
   .navbar .nav-item {
     font-size: 2em;
     padding-right: 1em; }
+
+#showcase {
+  position: relative;
+  min-height: 80vh;
+  border: 1px solid red; }
+  #showcase .primary-overlay {
+    background: #e74d3ccc;
+    height: 60vh; }
+  #showcase img {
+    height: 75vh; }
+
+@media (max-width: 991.98px) {
+  #showcase {
+    height: 50vh;
+    overflow: hidden; }
+    #showcase h1 {
+      font-size: 4em; }
+    #showcase img {
+      width: auto;
+      margin: 0 auto; } }
