--- a/pickabook/scss/_variables.scss
+++ b/pickabook/scss/_variables.scss
@@ -68,7 +68,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary: $blue !default;
+$primary: #e74c3c !default;
 $secondary: $gray-600 !default;
 $success: $green !default;
 $info: $cyan !default;
