--- a/glozzom/scss/style.scss
+++ b/glozzom/scss/style.scss
@@ -34,3 +34,8 @@ body {
   background: url(../img/image3.jpg);
   background-size: cover;
 }
+
+#home-icons {
+  font-size: 2em;
+  text-align: center;
+}
