--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-size: 62.5%; }
 
+p {
+  font-size: 1.7em; }
+
 .navbar .nav-item {
   font-size: 1.5em;
   text-transform: uppercase;
@@ -25,5 +28,27 @@ body {
   background-size: cover; }
 
 #home-icons {
-  font-size: 2em;
   text-align: center; }
+
+#home-heading {
+  position: relative;
+  min-height: 300px;
+  background-image: url("../img/lights.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  letter-spacing: 1.5px;
+  line-height: 1.5;
+  color: #fff; }
+
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); }
+
+@media (max-width: 768px) {
+  #info {
+    text-align: center; } }
