--- a/glozzom/scss/style.scss
+++ b/glozzom/scss/style.scss
@@ -4,6 +4,9 @@ $primary-overlay: #e74d3ccc;
 body {
   font-size: 62.5%;
 }
+p {
+  font-size: 1.7em;
+}
 
 .navbar {
   .nav-item {
@@ -36,6 +39,34 @@ body {
 }
 
 #home-icons {
-  font-size: 2em;
+  // font-size: 1.7em;
   text-align: center;
+}
+
+#home-heading {
+  position: relative;
+  min-height: 300px;
+  background-image: url("../img/lights.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  // font-size: 1.7em;
+  letter-spacing: 1.5px;
+  line-height: 1.5;
+  color: #fff;
+}
+
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+#info {
+  @media (max-width: 768px) {
+    text-align: center;
+  }
 }
