--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -12,8 +12,7 @@ p {
   border-bottom: 1px solid #fff; }
 
 .carousel-item {
-  height: 40em;
-  box-shadow: inset 0 0 100vw #e74d3ccc; }
+  height: 40em; }
 
 .carousel-image-1 {
   background: url(../img/image1.jpg);
@@ -52,3 +51,14 @@ p {
 @media (max-width: 768px) {
   #info {
     text-align: center; } }
+
+#video-play {
+  position: relative;
+  min-height: 200px;
+  background: url("../img/media.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  color: #fff; }
+  #video-play a {
+    color: #fff; }
