--- a/glozzom/scss/style.scss
+++ b/glozzom/scss/style.scss
@@ -21,7 +21,7 @@ p {
 
 .carousel-item {
   height: 40em;
-  box-shadow: inset 0 0 100vw $primary-overlay;
+  // box-shadow: inset 0 0 100vw $primary-overlay;
 }
 
 .carousel-image-1 {
@@ -68,5 +68,21 @@ p {
 #info {
   @media (max-width: 768px) {
     text-align: center;
+  }
+}
+
+#video-play {
+  position: relative;
+  min-height: 200px;
+  background: url("../img/media.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  // background-position: center;
+
+  text-align: center;
+  color: #fff;
+
+  a {
+    color: #fff;
   }
 }
