--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -62,3 +62,26 @@ p {
   color: #fff; }
   #video-play a {
     color: #fff; }
+
+@media (max-width: 768px) {
+  #gallery .col-md-4 {
+    padding: 1em;
+    align-self: center; } }
+
+@media (max-width: 768px) {
+  #newsletter input {
+    width: 100%; }
+  #newsletter button {
+    width: 100%; } }
+
+#page-header {
+  height: 300px;
+  background-image: url("../img/image1.jpg");
+  background-attachment: fixed;
+  background-position: 0 -360px;
+  border-bottom: 1px solid #eee;
+  padding-top: 50px;
+  color: #fff; }
+
+.about-img {
+  margin-top: -50px; }
