--- a/glozzom/scss/style.scss
+++ b/glozzom/scss/style.scss
@@ -86,3 +86,37 @@ p {
     color: #fff;
   }
 }
+
+#gallery {
+  @media (max-width: 768px) {
+    .col-md-4 {
+      padding: 1em;
+      align-self: center;
+    }
+  }
+}
+
+#newsletter {
+  @media (max-width: 768px) {
+    input {
+      width: 100%;
+    }
+    button {
+      width: 100%;
+    }
+  }
+}
+
+#page-header {
+  height: 300px;
+  background-image: url("../img/image1.jpg");
+  background-attachment: fixed;
+  background-position: 0 -360px;
+  border-bottom: 1px solid #eee;
+  padding-top: 50px;
+  color: #fff;
+}
+
+.about-img {
+  margin-top: -50px;
+}
