--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -85,3 +85,16 @@ p {
 
 .about-img {
   margin-top: -50px; }
+
+#services {
+  font-size: 1.5em; }
+
+#faq .card {
+  border: #444; }
+#faq a {
+  color: #fff;
+  text-decoration: none; }
+#faq .card-body,
+#faq .card-header {
+  background: #333;
+  font-size: 1.5em; }
