--- a/glozzom/scss/style.scss
+++ b/glozzom/scss/style.scss
@@ -120,3 +120,22 @@ p {
 .about-img {
   margin-top: -50px;
 }
+
+#services {
+  font-size: 1.5em;
+}
+
+#faq {
+  .card {
+    border: #444;
+  }
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+  .card-body,
+  .card-header {
+    background: #333;
+    font-size: 1.5em;
+  }
+}
