--- a/natureCamp/css/style.css
+++ b/natureCamp/css/style.css
@@ -7,16 +7,200 @@ Dark green: #28b485
 
 */
 
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+html {
+  font-size: 10px;
 }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 62.5%;
-  line-height: 1.7;
+  line-height: 1.4;
   color: #777;
+  padding: 0 30px;
+}
+
+header {
+  position: relative;
+}
+
+/* Clip-path is not fully supported in all browsers */
+/* Check it for more available options */
+/* background-position is good to keep focus on specific part of an image */
+/* https://bennettfeely.com/clippy/ */
+
+header {
+  position: relative;
+  height: 95vh;
+  background-color: red;
+  background-image: linear-gradient(
+      to bottom right,
+      rgba(126, 213, 111, 0.508),
+      rgba(85, 197, 122, 0.508)
+    ),
+    url("../img/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+}
+
+/*  Header logo */
+.logo-box {
+  position: absolute;
+  top: 2em;
+  left: 2em;
+  height: 50px;
+}
+.logo-box img {
+  height: 35px;
+}
+
+/* header main text */
+
+.text-box {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.main-heading {
+  color: #fff;
+  text-transform: uppercase;
+
+  backface-visibility: hidden;
+}
+
+.main-heading_primary {
+  display: block;
+  font-size: 8rem;
+  font-weight: 300;
+  letter-spacing: 40px;
+  animation: moveInLeft 1.5s ease;
+  /* animation-name: moveInLeft;
+  animation-duration: 2s;
+  animation-timing-function: ease-in; */
+}
+.main-heading_secondary {
+  display: block;
+  font-size: 4rem;
+  font-weight: 300;
+  letter-spacing: 13px;
+  animation: moveInRight 1.5s ease;
+  /* animation-name: moveInRight;
+  animation-duration: 2s;
+  animation-timing-function: ease-in; */
+}
+
+/* header animation */
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+
+  80% {
+    opacity: 0.8;
+    transform: translateX(+10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(+200px);
+  }
+
+  80% {
+    opacity: 0.8;
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(75px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/*  main-button */
+
+.btn:link,
+.btn:visited {
+  position: relative;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 400;
+  padding: 0.4em 1.5em;
+  margin-top: 1em;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.7);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom 1.5s ease 1.3s;
+  animation-fill-mode: backwards;
 }
