--- a/natureCamp/sass/main.scss
+++ b/natureCamp/sass/main.scss
@@ -6,65 +6,86 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-gray: #777;
+$color-white: #fff;
+$color-black: #000;
+
 *,
 *::before,
 *::after {
   padding: 0;
   margin: 0;
-  box-sizing: inherit; }
-
+  box-sizing: inherit;
+}
 html {
-  font-size: 0.8vw; }
+  font-size: 0.8vw;
+}
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.4;
-  color: #777;
+  color: $color-white;
   padding: 0 30px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* Clip-path is not fully supported in all browsers */
 /* Check it for more available options */
 /* background-position is good to keep focus on specific part of an image */
 /* https://bennettfeely.com/clippy/ */
+
 header {
   backface-visibility: hidden;
   position: relative;
   height: 95vh;
   background-color: red;
-  background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.508), rgba(40, 180, 133, 0.508)), url("../img/hero.jpg");
+  background-image: linear-gradient(
+      to bottom right,
+      rgba($color-primary-light, 0.508),
+      rgba($color-primary-dark, 0.508)
+    ),
+    url("../img/hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+}
 
 header img {
-  width: 100%; }
+  width: 100%;
+}
 
 /*  Header logo */
 .logo-box {
   position: absolute;
   top: 3rem;
-  left: 3rem; }
-
+  left: 3rem;
+}
 .logo-box img {
   height: 5rem;
-  min-height: 25px; }
+  min-height: 25px;
+}
 
 /* header main text */
+
 .text-box {
   position: absolute;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
-
+  text-align: center;
+}
 .main-heading {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+}
 
 .main-heading_primary {
   display: block;
@@ -74,8 +95,8 @@ header img {
   animation: moveInLeft 1.5s ease;
   /* animation-name: moveInLeft;
   animation-duration: 2s;
-  animation-timing-function: ease-in; */ }
-
+  animation-timing-function: ease-in; */
+}
 .main-heading_secondary {
   display: block;
   font-size: 4rem;
@@ -84,40 +105,58 @@ header img {
   animation: moveInRight 1.5s ease;
   /* animation-name: moveInRight;
   animation-duration: 2s;
-  animation-timing-function: ease-in; */ }
+  animation-timing-function: ease-in; */
+}
 
 /* header animation */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-20rem); }
+    transform: translateX(-20rem);
+  }
+
   80% {
     opacity: 0.8;
-    transform: translateX(1rem); }
+    transform: translateX(+1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(20rem); }
+    transform: translateX(+20rem);
+  }
+
   80% {
     opacity: 0.8;
-    transform: translateX(-1rem); }
+    transform: translateX(-1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateX(0);
+  }
+}
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(7.5rem); }
+    transform: translateY(7.5rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translateY(0); } }
+    transform: translateY(0);
+  }
+}
 
 /*  main-button */
+
 .btn:link,
 .btn:visited {
   position: relative;
@@ -129,19 +168,23 @@ header img {
   margin-top: 1em;
   display: inline-block;
   border-radius: 10rem;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+}
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); }
+  box-shadow: 0px 5px 15px rgba($color-black, 0.5);
+}
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 2px 5px rgba($color-black, 0.2);
+}
 
 .btn-white {
   background-color: #fff;
-  color: #777; }
+  color: $color-gray;
+}
 
 .btn::after {
   content: "";
@@ -153,15 +196,19 @@ header img {
   top: 0px;
   left: 0px;
   z-index: -1;
-  transition: all 0.4s; }
+  transition: all 0.4s;
+}
 
 .btn-white::after {
-  background-color: #fff; }
+  background-color: $color-black;
+}
 
 .btn:hover::after {
   transform: scaleX(1.5) scaleY(1.7);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn-animated {
   animation: moveInBottom 1.5s ease 1.3s;
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
