styles changed to scss

--- a/natureCamp/css/style.css
+++ b/natureCamp/css/style.css
@@ -20,7 +20,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.4;
-  color: #777;
+  color: #fff;
   padding: 0 30px;
   box-sizing: border-box; }
 
@@ -28,7 +28,7 @@ body {
 /* Check it for more available options */
 /* background-position is good to keep focus on specific part of an image */
 /* https://bennettfeely.com/clippy/ */
-header {
+.header {
   backface-visibility: hidden;
   position: relative;
   height: 95vh;
@@ -39,52 +39,34 @@ header {
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); }
-
-header img {
-  width: 100%; }
-
-/*  Header logo */
-.logo-box {
-  position: absolute;
-  top: 3rem;
-  left: 3rem; }
-
-.logo-box img {
-  height: 5rem;
-  min-height: 25px; }
-
-/* header main text */
-.text-box {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
-
-.main-heading {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden; }
-
-.main-heading_primary {
-  display: block;
-  font-size: 8rem;
-  font-weight: 300;
-  letter-spacing: 4rem;
-  animation: moveInLeft 1.5s ease;
-  /* animation-name: moveInLeft;
-  animation-duration: 2s;
-  animation-timing-function: ease-in; */ }
-
-.main-heading_secondary {
-  display: block;
-  font-size: 4rem;
-  font-weight: 300;
-  letter-spacing: 1.3rem;
-  animation: moveInRight 1.5s ease;
-  /* animation-name: moveInRight;
-  animation-duration: 2s;
-  animation-timing-function: ease-in; */ }
+  .header__logo-box {
+    position: absolute;
+    top: 3rem;
+    left: 3rem; }
+  .header__logo {
+    height: 4rem; }
+  .header__text-box {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .header__main-heading {
+    color: #fff;
+    text-transform: uppercase;
+    backface-visibility: hidden; }
+    .header__main-heading--pri {
+      display: block;
+      font-size: 8rem;
+      font-weight: 300;
+      letter-spacing: 4rem;
+      animation: moveInLeft 1.5s ease; }
+    .header__main-heading--sub {
+      display: block;
+      font-size: 4rem;
+      font-weight: 300;
+      letter-spacing: 1.3rem;
+      animation: moveInRight 1.5s ease; }
 
 /* header animation */
 @keyframes moveInLeft {
@@ -97,6 +79,51 @@ header img {
   100% {
     opacity: 1;
     transform: translateX(0); } }
+
+.btn:link, .btn:visited {
+  position: relative;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 400;
+  padding: 0.4em 1.5em;
+  margin-top: 1em;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  transition: all 0.4s; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); }
+  .btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.7);
+    opacity: 0; }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
+
+.btn--animated {
+  animation: moveInBottom 1.5s ease 1.3s;
+  animation-fill-mode: backwards; }
 
 @keyframes moveInRight {
   0% {
@@ -116,52 +143,3 @@ header img {
   100% {
     opacity: 1;
     transform: translateY(0); } }
-
-/*  main-button */
-.btn:link,
-.btn:visited {
-  position: relative;
-  text-transform: capitalize;
-  text-decoration: none;
-  font-size: 2em;
-  font-weight: 400;
-  padding: 0.4em 1.5em;
-  margin-top: 1em;
-  display: inline-block;
-  border-radius: 10rem;
-  transition: all 0.2s; }
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); }
-
-.btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
-
-.btn-white {
-  background-color: #fff;
-  color: #777; }
-
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: -1;
-  transition: all 0.4s; }
-
-.btn-white::after {
-  background-color: #fff; }
-
-.btn:hover::after {
-  transform: scaleX(1.5) scaleY(1.7);
-  opacity: 0; }
-
-.btn-animated {
-  animation: moveInBottom 1.5s ease 1.3s;
-  animation-fill-mode: backwards; }
