composition section complete

--- a/natureCamp/sass/main.scss
+++ b/natureCamp/sass/main.scss
@@ -1,200 +1,16 @@
-/*
-COLORS:
+@import "abstracts/variables";
+@import "abstracts/mixins";
+@import "abstracts/functions";
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@import "base/base";
+@import "base/typography";
+@import "base/animations";
+@import "base/utilities";
 
-*/
+@import "layout/grid";
+@import "layout/header";
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-gray: #777;
-$color-white: #fff;
-$color-black: #000;
+@import "components/button";
+@import "components/composition";
 
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
-}
-html {
-  font-size: 0.8vw;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.4;
-  color: $color-white;
-  padding: 0 30px;
-  box-sizing: border-box;
-}
-
-/* Clip-path is not fully supported in all browsers */
-/* Check it for more available options */
-/* background-position is good to keep focus on specific part of an image */
-/* https://bennettfeely.com/clippy/ */
-
-.header {
-  backface-visibility: hidden;
-  position: relative;
-  height: 95vh;
-  background-color: red;
-  background-image: linear-gradient(
-      to bottom right,
-      rgba($color-primary-light, 0.508),
-      rgba($color-primary-dark, 0.508)
-    ),
-    url("../img/hero.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-
-  &__logo-box {
-    position: absolute;
-    top: 3rem;
-    left: 3rem;
-  }
-  &__logo {
-    height: 4rem;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-
-  &__main-heading {
-    color: $color-white;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    &--pri {
-      display: block;
-      font-size: 8rem;
-      font-weight: 300;
-      letter-spacing: 4rem;
-      animation: moveInLeft 1.5s ease;
-    }
-    &--sub {
-      display: block;
-      font-size: 4rem;
-      font-weight: 300;
-      letter-spacing: 1.3rem;
-      animation: moveInRight 1.5s ease;
-    }
-  }
-}
-
-/* header animation */
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-20rem);
-  }
-
-  80% {
-    opacity: 0.8;
-    transform: translateX(+1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-// BUtton styles
-
-.btn {
-  &:link,
-  &:visited {
-    position: relative;
-    text-transform: capitalize;
-    text-decoration: none;
-    font-size: 2em;
-    font-weight: 400;
-    padding: 0.4em 1.5em;
-    margin-top: 1em;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all 0.2s;
-  }
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0px 5px 15px rgba($color-black, 0.5);
-    &::after {
-      transform: scaleX(1.5) scaleY(1.7);
-      opacity: 0;
-    }
-  }
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 2px 5px rgba($color-black, 0.2);
-  }
-
-  &--white {
-    background-color: $color-white;
-    color: $color-gray;
-    &::after {
-      background-color: $color-white;
-    }
-  }
-  &--animated {
-    animation: moveInBottom 1.5s ease 1.3s;
-    animation-fill-mode: backwards;
-  }
-}
-
-// button end
-
-// Animation
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(+20rem);
-  }
-
-  80% {
-    opacity: 0.8;
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(7.5rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+@import "pages/home";
