--- a/natureCamp/css/style.css
+++ b/natureCamp/css/style.css
@@ -1,11 +1,3 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
 *,
 *::before,
 *::after {
@@ -17,28 +9,152 @@ html {
   font-size: 0.8vw; }
 
 body {
+  box-sizing: border-box; }
+
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.4;
   color: #fff;
-  padding: 0 30px;
-  box-sizing: border-box; }
+  padding: 0 30px; }
 
-/* Clip-path is not fully supported in all browsers */
-/* Check it for more available options */
-/* background-position is good to keep focus on specific part of an image */
-/* https://bennettfeely.com/clippy/ */
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden; }
+  .heading-primary--main {
+    display: block;
+    font-size: 11rem;
+    font-weight: 300;
+    letter-spacing: 2rem;
+    animation: moveInLeft 1.5s ease; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 4rem;
+    font-weight: 300;
+    letter-spacing: 1.4rem;
+    animation: moveInRight 1.5s ease; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  color: #777;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: scale(1.1);
+    text-shadow: 5rem 5rem 2rem rgba 0, 0, 0, 0.9; }
+
+.heading-tertiary {
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.5rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 2rem; }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-20rem); }
+  80% {
+    opacity: 0.8;
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(20rem); }
+  80% {
+    opacity: 0.8;
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(7.5rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+.u-container {
+  width: 80%;
+  margin: 0 auto; }
+
+.u-text-center {
+  text-align: center; }
+
+.u-text-left {
+  text-align: left; }
+
+.u-margin-bottom-5 {
+  margin-bottom: 5rem; }
+
+.u-margin-bottom-1 {
+  margin-bottom: 1rem; }
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.col {
+  background: #f7f7f7;
+  color: #777; }
+  .col-1-of-2 {
+    width: calc((100% - 1%) / 2);
+    float: left; }
+    .col-1-of-2:not(:last-child) {
+      margin-right: 1%; }
+  .col-1-of-3 {
+    width: calc((100% - 2%) / 3);
+    float: left; }
+    .col-1-of-3:not(:last-child) {
+      margin-right: 1%; }
+  .col-2-of-3 {
+    width: calc((100% - 1%) / 3 * 2);
+    float: right; }
+  .col-1-of-4 {
+    width: calc((100% - 3%) / 4);
+    float: left; }
+    .col-1-of-4:not(:last-child) {
+      margin-right: 1%; }
+  .col-2-of-4 {
+    width: calc((100% - 1%) / 2);
+    float: left; }
+    .col-2-of-4:not(:last-child) {
+      margin-right: 1%; }
+  .col-3-of-4 {
+    width: calc(((100% - 1%) / 4) * 3);
+    float: right; }
+    .col-3-of-4:not(:last-child) {
+      margin-right: 1%; }
+
 .header {
   backface-visibility: hidden;
   position: relative;
-  height: 95vh;
+  height: 95vw;
   background-color: red;
   background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.508), rgba(40, 180, 133, 0.508)), url("../img/hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); }
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vw, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85vw, 0 100%); }
   .header__logo-box {
     position: absolute;
     top: 3rem;
@@ -51,43 +167,15 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
-  .header__main-heading {
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden; }
-    .header__main-heading--pri {
-      display: block;
-      font-size: 8rem;
-      font-weight: 300;
-      letter-spacing: 4rem;
-      animation: moveInLeft 1.5s ease; }
-    .header__main-heading--sub {
-      display: block;
-      font-size: 4rem;
-      font-weight: 300;
-      letter-spacing: 1.3rem;
-      animation: moveInRight 1.5s ease; }
-
-/* header animation */
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-20rem); }
-  80% {
-    opacity: 0.8;
-    transform: translateX(1rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
 
 .btn:link, .btn:visited {
   position: relative;
-  text-transform: capitalize;
+  text-transform: uppercase;
   text-decoration: none;
-  font-size: 2em;
+  font-size: 4rem;
   font-weight: 400;
-  padding: 0.4em 1.5em;
-  margin-top: 1em;
+  padding: 1rem 3rem;
+  margin-top: 3rem;
   display: inline-block;
   border-radius: 10rem;
   transition: all 0.2s; }
@@ -125,21 +213,55 @@ body {
   animation: moveInBottom 1.5s ease 1.3s;
   animation-fill-mode: backwards; }
 
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(20rem); }
-  80% {
-    opacity: 0.8;
-    transform: translateX(-1rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
+.btn-text:link, .btn-text:visited {
+  font-size: 2rem;
+  transition: all 0.2s;
+  text-decoration: none;
+  border-bottom: #28b485 3px solid;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  display: inline-block;
+  transition: all 0.3s; }
 
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(7.5rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
+.btn-text:hover {
+  transform: translateY(-5px);
+  background: #28b485;
+  box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2);
+  border: none;
+  color: #fff; }
+
+.btn-text:active {
+  font-size: 2rem;
+  box-shadow: 0rem 0.2rem 2rem rgba(0, 0, 0, 0.2); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 5;
+    outline-offset: 15px; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      right: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      transform: scale(1.1) translateY(-5px);
+      box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.4);
+      z-index: 10;
+      background: #fff;
+      outline: 10px solid #55c57a; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+.section-about {
+  background: #f7f7f7;
+  padding: 15rem 0;
+  margin-top: -10vh; }
