--- a/natureCamp/sass/base/_typography.scss
+++ b/natureCamp/sass/base/_typography.scss
@@ -51,10 +51,12 @@ body {
   font-size: 2rem;
   font-weight: 400;
   text-transform: uppercase;
+  color: $color-gray;
 }
 
 .paragraph {
   font-size: 1.5rem;
+  color: $color-gray;
   &:not(:last-child) {
     margin-bottom: 2rem;
   }
