--- a/natureCamp/sass/pages/_home.scss
+++ b/natureCamp/sass/pages/_home.scss
@@ -1,5 +1,20 @@
 .section-about {
   background: $color-gray-light-1;
-  padding: 15rem 0;
+  padding: 20rem 5rem;
   margin-top: -10vh;
+}
+.section-features {
+  margin-top: -10vh;
+  padding: 15rem 5rem;
+  background-image: linear-gradient(
+      to bottom right,
+      rgba($color-primary-light, 0.508),
+      rgba($color-primary-dark, 0.508)
+    ),
+    url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  & > * {
+    transform: skewY(7deg);
+  }
 }
