--- a/natureCamp/css/style.css
+++ b/natureCamp/css/style.css
@@ -42,6 +42,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   display: inline-block;
+  margin: 0 auto;
   background-image: linear-gradient(to right, #7ed56f, #28b485);
   -webkit-background-clip: text;
   background-clip: text;
@@ -174,9 +175,9 @@ body {
   position: relative;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 4rem;
-  font-weight: 400;
-  padding: 1rem 3rem;
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 0.5rem 2rem;
   margin-top: 3rem;
   display: inline-block;
   border-radius: 10rem;
@@ -236,6 +237,96 @@ body {
   font-size: 2rem;
   box-shadow: 0rem 0.2rem 2rem rgba(0, 0, 0, 0.2); }
 
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  margin: 0 2rem; }
+  .card__side {
+    height: 35rem;
+    transition: all 1s ease;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+    .card__side--front {
+      background: gray; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to bottom right, #7ed56f, #28b485); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to bottom right, #3498db, #064066); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to bottom right, #af4c41, #e0230e); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(360deg); }
+  .card__picture {
+    background-size: cover;
+    height: 50%;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.4), rgba(40, 180, 133, 0.4)), url(../img/nat-5.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to bottom right, rgba(52, 152, 219, 0.4), rgba(6, 64, 102, 0.4)), url(../img/nat-6.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to bottom right, rgba(175, 76, 65, 0.4), rgba(224, 35, 14, 0.4)), url(../img/nat-7.jpg); }
+  .card__heading {
+    font-size: 2rem;
+    font-weight: 300;
+    text-align: right;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    right: 2rem;
+    top: 11rem;
+    width: 50%; }
+  .card__heading-span {
+    padding: 0.3rem 1rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.6), rgba(40, 180, 133, 0.6)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to bottom right, rgba(52, 152, 219, 0.6), rgba(6, 64, 102, 0.6)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to bottom right, rgba(175, 76, 65, 0.6), rgba(224, 35, 14, 0.6)); }
+  .card__details ul {
+    list-style: none;
+    width: 50%;
+    margin: 0.5rem auto; }
+    .card__details ul li {
+      text-align: center;
+      font-size: 1.5rem;
+      letter-spacing: 0.2rem;
+      text-transform: capitalize; }
+      .card__details ul li:not(:last-child) {
+        padding: 0.3rem 0;
+        border-bottom: 1px solid #fff; }
+  .card__cta {
+    width: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .card__price-box {
+    text-align: center;
+    margin-bottom: 1rem; }
+  .card__price-only {
+    font-size: 2rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+
 .composition {
   position: relative; }
   .composition__photo {
@@ -294,3 +385,12 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-tours {
+  width: 100%;
+  background: #f7f7f7;
+  margin-top: -10vh;
+  padding: 25rem 5rem;
+  margin-bottom: 15rem; }
+  .section-tours .row {
+    width: 100%; }
