--- a/natureCamp/sass/abstracts/_variables.scss
+++ b/natureCamp/sass/abstracts/_variables.scss
@@ -2,6 +2,12 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+$color-secondary-light: #3498db;
+$color-secondary-dark: #064066;
+
+$color-tertiary-light: #af4c41;
+$color-tertiary-dark: #e0230e;
+
 $color-gray-light-1: #f7f7f7;
 $color-gray: #777;
 $color-white: #fff;
