--- a/natureCamp/sass/base/_typography.scss
+++ b/natureCamp/sass/base/_typography.scss
@@ -33,6 +33,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   display: inline-block;
+  margin: 0 auto;
   background-image: linear-gradient(
     to right,
     $color-primary-light,
