--- a/natureCamp/sass/main.scss
+++ b/natureCamp/sass/main.scss
@@ -11,6 +11,7 @@
 @import "layout/header";
 
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "components/feature-box";
 
