--- a/natureCamp/sass/pages/_home.scss
+++ b/natureCamp/sass/pages/_home.scss
@@ -18,3 +18,14 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  width: 100%;
+  background: $color-gray-light-1;
+  margin-top: -10vh;
+  padding: 25rem 5rem;
+  margin-bottom: 15rem;
+  .row {
+    width: 100%;
+  }
+}
